<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:adjustViewBounds="true"
    android:background="@color/materialblack"
    android:fitsSystemWindows="true"
    android:hapticFeedbackEnabled="true"
    android:saveEnabled="true">

    <ma.mk.beinsportchannels.RoundedImageView
        android:id="@+id/roundedImageView"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:src="@drawable/myavatar" />

    <!-- view for AdMob Banner Ad -->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/roundedImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:adjustViewBounds="true"
        android:text="@string/about"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:adjustViewBounds="true"
        android:text="@string/about2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/background_light" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        ads:fabSize="normal"
        ads:srcCompat="@android:drawable/ic_dialog_email"
        android:layout_above="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="11dp" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:adjustViewBounds="true"
        android:text="@string/about3"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/background_light"
        android:textStyle="normal|italic"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_above="@+id/adView"
        android:layout_alignEnd="@+id/roundedImageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/roundedImageView"
        android:text="@string/date"
        android:textColor="@android:color/background_light"
        android:textStyle="normal|italic"/>

</RelativeLayout>